# kinect_tasks

./: .gitignore  CMakeLists.txt
include/: common.h  load_rgbd.h
include/kinect2pcl/: image_rebuild.h  kinect_parameters.h  point_cloud_builder.h
include/object_builder/: cluster_divider.h  object_cluster.h  target_locator.h
include/object_finder/: object_cluster.h
include/pcl_filter/: plane_filter.h  point_cloud_minus.h
include/rgb_filter/: color_block_filter.h  color_fixer.h  entropy_filter.h  interface_rgb_filter.h  line_filter.h  rgb_object_filter.h
src/: demo_object_rgb_filter.cpp  display_2d_object_finder.cpp  display_3d.cpp  display_3d_object_finder.cpp  display_people_detection.cpp  kinect_take_raw.cpp  load_rgbd.cpp  object_finder.cpp
src/kinect2pcl/: image_rebuild.cpp  kinect_parameters.cpp  point_cloud_builder.cpp
src/object_builder/: cluster_divider.cpp  kinect_take_raw.cpp  object_builder_from_raw.cpp  object_cluster.cpp  target_locator.cpp
src/object_finder/: display_2d_object_finder.cpp  object_cluster.cpp
src/pcl_filter/: plane_filter.cpp  point_cloud_minus.cpp
src/rgb_filter/: color_block_filter.cpp  color_fixer.cpp  demo_object_rgb_filter.cpp  entropy_filter.cpp  line_filter.cpp  rgb_object_filter.cpp
